update author pipeline
